--- a/sections/about.liquid
+++ b/sections/about.liquid
@@ -141,7 +141,7 @@
 
 						</div>
 						<div class="text-center d-none d-sm-block">
-						     {{'Contact us' | link_to: 'contact-us' |  replace: 'href', 'class="button-preview main-about__button-preview button-preview_size_sm" href' }} 
+						     {{'Contact us' | link_to: 'contact' |  replace: 'href', 'class="button-preview main-about__button-preview button-preview_size_sm" href' }} 
 						</div>
 						
 					</div>
