--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -7,7 +7,7 @@
             <div class="top-nav__content">
               <div class="top-nav__text"><a class="top-nav__link">Free Shipping! On all Purchases</a></div>
               <div class="top-nav__nav">
-                <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_phone">1-877-653-3877</a>
+                <a href="tel:18776533877" class="top-nav__nav-item top-nav__nav-item_icon_phone">1-877-653-3877</a>
                 <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_chat">Live chat</a>                                   
                 {% if customer %}
                   <a href="/account" class="top-nav__nav-item top-nav__nav-item_icon_user">{{ customer.first_name }}</a>  
