--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -9,7 +9,7 @@
 						<a href="http://www.instagram.com/mlfurs" target="_blank" class="main-banner__social-item"><img src="{{ 'inst.png' | asset_url }}" alt="inst"></a>
 					</div>
 
-					<a href="#" class="main-banner__link">Shop <img src="{{ 'arrow-down.png' | asset_url }}" alt="Arrow"></a>
+					<!--<a href="#" class="main-banner__link">Shop <img src="{{ 'arrow-down.png' | asset_url }}" alt="Arrow"></a>-->
 
 					<div class="main-banner__content main-banner__content__desktop" style="background-image: url({{ section.settings.hero_image | img_url: 'master' }});">
 					   {%- include "hero_content" -%}
@@ -76,7 +76,7 @@
 		{
 			"id": "hero_show_button",
 			"type": "checkbox",
-			"label": "Button Text"
+			"label": "show button"
 		}
 										
   ]  
