--- a/sections/ski_and_affirm.liquid
+++ b/sections/ski_and_affirm.liquid
@@ -10,13 +10,17 @@
 						code: <span>ski2018</span>
 					</div>
 				</div>
-				<div class="col-12 col-lg-6 banner-descr__right">
-					<div class="banner-descr__logo"><img class="img-responsive img-width" src="{{ 'affirm.png' | asset_url }}" alt="Affirm"></div>
+				<div class="col-12 col-lg-6 banner-descr__right">                    
+					<div class="banner-descr__logo">
+                      <a class="affirm-site-modal" data-page-type="banner">
+                         <img class="img-responsive img-width img-affirm" src="{{ 'black_logo-transparent_bg.png' | asset_url }}" alt="Affirm">
+                      </a>
+                    </div>
 					<div class="banner-descr__right-text">
 						<div class="banner-descr__right-text-large">Wear Now, <span>Pay Later</span></div>
 						
 					</div>
-					<a href="#" class="banner-descr__button-preview button-preview button-preview_dark">Learn More</a>
+					<a class="banner-descr__button-preview button-preview button-preview_dark affirm-site-modal" data-page-type="banner">Learn More</a>
 				</div>
 			</div>
 		</div>
