--- a/snippets/hero_content.liquid
+++ b/snippets/hero_content.liquid
@@ -1,5 +1,5 @@
-<h5>{{section.settings.hero_title}}</h5>
-<h1>{{section.settings.hero_subtitle}}</h1>
+<!--<h5>{{section.settings.hero_title}}</h5>
+<h1>{{section.settings.hero_subtitle}}</h1>-->
 <div class="main-banner__content-text">{{section.settings.hero_description}}</div>
 
 {%- if section.settings.hero_show_button == true -%}
