--- a/snippets/nav-sidebar.liquid
+++ b/snippets/nav-sidebar.liquid
@@ -10,13 +10,13 @@
 							<a href="reviews" class="nav-sidebar__link">Customer reviews</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Appointments</a>
+							<a href="/pages/appointments" class="nav-sidebar__link">Appointments</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Did you know</a>
+							<a href="/pages/sustainability" class="nav-sidebar__link">Sustainability</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="size-chart" class="nav-sidebar__link">Size chart</a>
+							<a href="/pages/size-chart" class="nav-sidebar__link">Size chart</a>
 						</li>
 						<li class="nav-sidebar__item">
 							<a href="free-shipping" class="nav-sidebar__link">Free shipping</a>
@@ -25,13 +25,13 @@
 							<a href="/pages/customer-service-layaway" class="nav-sidebar__link">Layaway & Bill me later</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="/customer-service-faq" class="nav-sidebar__link">Faq`s</a>
+							<a href="/pages/customer-service-faq" class="nav-sidebar__link">Faq`s</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="/privacy-and-security" class="nav-sidebar__link">Privacy & Security</a>
+							<a href="/pages/privacy-and-security" class="nav-sidebar__link">Privacy & Security</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="/policies" class="nav-sidebar__link">Privacy Policy</a>
+							<a href="/pages/customer-service-policies" class="nav-sidebar__link">Policies</a>
 						</li>
 					</ul>
 				</div>
