--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,1 +1,1 @@
-{{ content_for_index }}{% include 'recently-viewed-products' %}{% include 'zendapps_recent_products' %}
+{{ content_for_index }}{% include 'recently-viewed-products' %}
