--- a/web-flair/app/sass/_base.sass
+++ b/web-flair/app/sass/_base.sass
@@ -39,6 +39,9 @@ body.body
 	height: auto
 	&.img-width
 		width: 100%
+        
+.img-responsive.img-affirm
+    width: 120px
 
 .container-fluid
 	padding-left: 115px
