--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -300,6 +300,7 @@
 		padding: 80px 40px
 		align-items: center
 		background-position: right center
+		min-height: 300px
 
 	.main-nav__content
 		justify-content: space-between
@@ -702,6 +703,7 @@
 	.second-banner
 		padding: 75px 25px 25px
 		align-items: flex-start
+		min-height: auto
 
 	.second-banner h2
 		font-size: 38px
