--- a/web-flair/app/sass/blocks/banner-preview/_banner-preview.sass
+++ b/web-flair/app/sass/blocks/banner-preview/_banner-preview.sass
@@ -16,6 +16,14 @@
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: center
+
+	h1
+		font-family: "essonnes-display", serif
+
+	h2
+		font-family: "essonnes-display", serif
+		font-style: italic
+
 	h3
 		line-height: 1.1
 		font-size: 48px
