--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,6 +31,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
  
 	  {{ 'main.min.css'  | asset_url | stylesheet_tag }}
+
+    <link rel="stylesheet" href="https://use.typekit.net/ygr4erw.css">
+
 		{% include 'globo-megamenu-script' %}
 		{{ content_for_header }}
 
