I did changes after launch

--- a/assets/products.js.liquid
+++ b/assets/products.js.liquid
@@ -29,8 +29,8 @@ function disableOptionsRemaining() {
       id = "option_"+mlfurs.firstFilterApplied+"_"+newValue;
       
       if ($("#"+id).hasClass("option_to_select_active") == false && $("#diagonal"+id).css("display") != 'block') {
-          $("#"+id).addClass("option_to_select_disabled");
-          $("#"+id).attr("disabled", "disabled");
+          //$("#"+id).addClass("option_to_select_disabled");
+          //$("#"+id).attr("disabled", "disabled");
       }
   }
 }
