--- a/web-flair/app/sass/_base.sass
+++ b/web-flair/app/sass/_base.sass
@@ -16,7 +16,6 @@
     background: transparent
 
 
-
 body.body
 	font-size: 16px
 	min-width: 320px
@@ -119,3 +118,8 @@ ul, li
     position: absolute
     top: -13px
     right: -13px
+
+img
+    max-width: 100%
+  
+  
