--- a/web-flair/app/sass/blocks/reviews/_reviews.sass
+++ b/web-flair/app/sass/blocks/reviews/_reviews.sass
@@ -9,4 +9,6 @@
         .spr-review-reportreview
             display: none
         #shopify-product-reviews
-            margin: 0 
+            margin: 0
+    .spr-summary 
+        display: none
