--- a/snippets/nav-sidebar.liquid
+++ b/snippets/nav-sidebar.liquid
@@ -1,13 +1,13 @@
 				<div class="col-3 d-none d-lg-block">
 					<ul class="nav-sidebar">
 						<li class="nav-sidebar__item">
-							<a href="about" class="nav-sidebar__link {% if option_selected == 'about' %}nav-sidebar__link_active {% endif %}">About</a>
+							<a href="/pages/about" class="nav-sidebar__link {% if option_selected == 'about' %}nav-sidebar__link_active {% endif %}">About</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="contact" class="nav-sidebar__link {% if option_selected == 'contact' %}nav-sidebar__link_active {% endif %}">Contact us</a>
+							<a href="/pages/contact" class="nav-sidebar__link {% if option_selected == 'contact' %}nav-sidebar__link_active {% endif %}">Contact us</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="reviews" class="nav-sidebar__link">Customer reviews</a>
+							<a href="/pages/reviews" class="nav-sidebar__link">Customer reviews</a>
 						</li>
 						<li class="nav-sidebar__item">
 							<a href="/pages/appointments" class="nav-sidebar__link">Appointments</a>
