--- a/web-flair/app/sass/blocks/main-banner/_main-banner.sass
+++ b/web-flair/app/sass/blocks/main-banner/_main-banner.sass
@@ -49,6 +49,7 @@
 
 .main-banner__content
 	height: calc(100vh - 309px)
+	max-width: 1685px
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: center
@@ -60,8 +61,9 @@
 	display: flex
 	flex-direction: column
 	justify-content: center
-	align-items: start;
-	color: #fff
+	align-items: start
+	color: #fff	
+
 	h5
 		font-family: $bold-italic
 		margin-bottom: 0
@@ -83,7 +85,7 @@
 
 
 .main-banner__content__desktop
-	display: block	
+	display: block		
 
 	@include media-breakpoint-down(md) 
 	   display: none
