I put the Garret's code

--- a/web-flair/app/sass/main.sass
+++ b/web-flair/app/sass/main.sass
@@ -134,7 +134,12 @@
 @import "pages/_search"
 
 
-
-
+//Garret's code to override
+.container-fluid 
+    width: 1685px
+    max-width: 100%
+    padding-left: 20px
+    padding-right: 20px
+    margin: 0 auto
 
 @import "media" // Always at the end
