--- a/sections/services.liquid
+++ b/sections/services.liquid
@@ -62,7 +62,7 @@
 												<!--<div class="more-info__price-title">Starting from</div>
 												<div class="more-info__price">$150.00 Storage Bundle</div>-->
 												<div class="more-info__include_text">
-												   You will charged o <strong>non-refutable $25 fee</strong>
+												   You will charged a <strong>non-refundable $25 fee</strong>
 												   for pickup at the time of booking. Upon receiving your
 												   garment(s), we will call you to review the final pricing
 												   before beginning the services
@@ -148,14 +148,14 @@
 										   Expert today at 1-877-653-3877
 										</div>
 
-										<a class="more-info__link" href="#">Learn More</a>
+										<!--<a class="more-info__link" href="#">Learn More</a>-->
 
 										<div class="more-info__title">Our Prices</div>
 										<div class="more-info__text">
 										   View a detailed price sheet for all services offered
 										</div>
 
-										<a class="more-info__link" href="#">View Full Price Chart</a>
+										<a class="more-info__link" href="/pages/services-prices">View Full Price Chart</a>
 									</div>
 									
 									<div class="more-info__image" style="background-image: url({{ section.settings.more_info | img_url: 'master' }});"></div>
