--- a/templates/page.designers.liquid
+++ b/templates/page.designers.liquid
@@ -123,7 +123,7 @@
                         <tr>
                             <td><a href="https://mlfurs.myshopify.com/collections/m-miller" title="M. Miller">M. Miller</a></td>
                             <td><a href="https://mlfurs.myshopify.com/collections/maison-montval" title="Maison Montval">Maison Montval</a></td>
-                            <td><a href="https://mlfurs.myshopify.com/collections/malan-breton" title="Malan Breton">Malan Breton</a></td>
+                            <!--<td><a href="https://mlfurs.myshopify.com/collections/malan-breton" title="Malan Breton">Malan Breton</a></td>-->
                         </tr>
                         <tr>
                             <td><a href="https://mlfurs.myshopify.com/collections/mary-mcfadden" title="Mary McFadden">Mary McFadden</a></td>
