--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,6 +113,7 @@
  <input type="hidden" id="656565115116111114101" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.first_name }} {{ customer.last_name }}"/>
  
  {% include 'scroll-to-the-top' %}
- </body>
+ {% comment %}This is for Volume Discount App by hulkapps{% endcomment %}{% include 'hulkcode_common' %}{% include 'spurit_dmr_theme_snippet' %}
+</body>
 </html>
 {% include 'livechat_chat_window' %}
