--- a/web-flair/app/sass/blocks/main-banner/_main-banner.sass
+++ b/web-flair/app/sass/blocks/main-banner/_main-banner.sass
@@ -83,39 +83,16 @@
 	margin-top: 20px
 
 
-
-.main-banner__content__desktop
-	display: block		
-
-	@include media-breakpoint-down(md) 
-	   display: none
-
-.main-banner__content__tablet
-	display: none
-	height: calc(100vh - 109px)
-
-	@include media-breakpoint-down(md) 
-	   display: block
-
-	@include media-breakpoint-down(sm) 
-	   display: none	   
-
-
-.main-banner__content__mobile
-	display: none
-	height: calc(100vh - 109px)
-
-	@include media-breakpoint-down(sm) 
-	   display: block
-
-
 #shopify-section-hero 
 	.main-banner__content 
-		min-height: 500px
+		@include fluid-ratio(1645px 669px, 300px 150px)
 
 #shopify-section-1535420535068 
 	.banner-preview 
-		min-height: 450px
+		 @include fluid-ratio(800px 600px, 400px 300px)
+
+		 @include media-breakpoint-down(sm) 
+	        @include fluid-ratio(500px 300px, 300px 300px)
 
 
 .banners .categories_desktop
