I fixed the template on the customer templates

--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,38 +1,40 @@
-		<div id="login-popup" class="login-popup popup-window" style="margin-bottom: 10px">
-			<div class="login-popup__left-part">
-          {%- if form.errors -%}
-            <div class="form-message form-message--error">
-              {{ form.errors | default_errors }}
-            </div>
-          {%- endif -%}
+<div class="container-fluid">
+				<div id="login-popup" class="login-popup popup-window" style="margin-bottom: 10px">
+					<div class="login-popup__left-part">
+							{%- if form.errors -%}
+								<div class="form-message form-message--error">
+									{{ form.errors | default_errors }}
+								</div>
+							{%- endif -%}
 
-				{% form 'reset_customer_password', class: 'account-form'  %}        				  
-					<div class="account-form__title">{{ 'customer.reset_password.title' | t }}</div>
-          <div class="account-form__subtitle">{{ 'customer.reset_password.subtext' | t: email: email }}</div>
-					<div class="account-form__body">
+						{% form 'reset_customer_password', class: 'account-form'  %}        				  
+							<div class="account-form__title">{{ 'customer.reset_password.title' | t }}</div>
+							<div class="account-form__subtitle">{{ 'customer.reset_password.subtext' | t: email: email }}</div>
+							<div class="account-form__body">
 
-					<label for="email">Password</label>
-          <input  type="password" value="" name="customer[password]" id="ResetPassword" class="input-text account-form__input-text">					
+							<label for="email">Password</label>
+							<input  type="password" value="" name="customer[password]" id="ResetPassword" class="input-text account-form__input-text">					
 
-					<label for="password">Confirm Password</label>
-          <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="input-text account-form__input-text">						
-						<input type="submit" class="form-button" value="{{ 'customer.reset_password.submit' | t }}">
+							<label for="password">Confirm Password</label>
+							<input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="input-text account-form__input-text">						
+								<input type="submit" class="form-button" value="{{ 'customer.reset_password.submit' | t }}">
+							</div>
+						{% endform %}
+
 					</div>
-				{% endform %}
-
-			</div>
-			<div class="login-popup__right-part">
-				<img src="{{ 'preview-full-SignUp_image_alt1.jpg' | asset_url }}" alt="Reset Password" class="img-responsive img-width">
-				<div class="login-popup__text">
-					<div class="login-popup__text-title">MLFurs Advantages</div>
-					<div class="login-popup__list">
-						<li class="login-popup__list-item">Receive <strong>20%</strong> off your first purchase</li>
-						<li class="login-popup__list-item">Automatic enrollment in our upcoming referral and loyalty programs.</li>
-						<li class="login-popup__list-item">Sneak peeks at the newest arrivals.</li>
-						<li class="login-popup__list-item">Access to exclusive deals throughout the year.</li>
+					<div class="login-popup__right-part">
+						<img src="{{ 'preview-full-SignUp_image_alt1.jpg' | asset_url }}" alt="Reset Password" class="img-responsive img-width">
+						<div class="login-popup__text">
+							<div class="login-popup__text-title">MLFurs Advantages</div>
+							<div class="login-popup__list">
+								<li class="login-popup__list-item">Receive <strong>20%</strong> off your first purchase</li>
+								<li class="login-popup__list-item">Automatic enrollment in our upcoming referral and loyalty programs.</li>
+								<li class="login-popup__list-item">Sneak peeks at the newest arrivals.</li>
+								<li class="login-popup__list-item">Access to exclusive deals throughout the year.</li>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 </div>
