Erica fixed a TYPO

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -30,7 +30,7 @@
 						</div>
 
 						<div class="footer__column column stay_connected"> 
-							<div class="footer__column-title">STAY CONECTED</div>
+							<div class="footer__column-title">STAY CONNECTED</div>
 							<ul class="footer__list">
 								<li class="footer__social-item footer__social-item_blured">
 								   <a class="footer__list-link" href="{{section.settings.footer_url_facebook}}" target="_blank">
