--- a/web-flair/app/sass/blocks/product/_product.sass
+++ b/web-flair/app/sass/blocks/product/_product.sass
@@ -1,5 +1,5 @@
 .product__image
-	margin-bottom: 20px
+	margin-bottom: 10px
 
 .product__link
 	z-index: 1
@@ -66,6 +66,7 @@
 			display: inline
 
 .product__swatches
+	clear: both
 	.swatch
 		background-repeat: no-repeat
 		background-size: 100%
