I added the Erica's changes

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#000">
     <!-- Custom Browsers Color End -->
   <!--Ivan's BS -->
-    <meta name="robots" content="noindex, nofollow">
+  <meta name="google-site-verification" content="VCDBsCjPYOiCGGcupb-q0jyoXfj35kSa_Qv6vY9ObYo" />
 
   {% include 'SEOManager' %}
 
