I added the Erica's changes

--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,3 +1,8 @@
-<h2>Where did it go?!?</h2> 
-We seem to have misplaced that page. Click the back button to go back from whence you came.
-{% include 'SEOManager-404' %}
+
+<h2 style="text-align: center;
+    padding-top: 40px;">Where did it go?!?</h2> 
+<p style="text-align: center;
+          padding: 40px;">We seem to have misplaced that page. Click the back button to go back to the previous page.</p>
+
+{% include 'SEOManager-404' %}
+</div>
