I added a link on the whole hero banner

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -9,11 +9,10 @@
 						<a href="http://www.instagram.com/mlfurs" target="_blank" class="main-banner__social-item"><img src="{{ 'inst.png' | asset_url }}" alt="inst"></a>
 					</div>
 
-					<!--<a href="#" class="main-banner__link">Shop <img src="{{ 'arrow-down.png' | asset_url }}" alt="Arrow"></a>-->
-
-					<div class="main-banner__content main-banner__content__desktop" style="background-image: url({{ section.settings.hero_image | img_url: 'master' }});">
-					   {%- include "hero_content" -%}
-					</div>
+          <a href="/collections/fur">
+            <div class="main-banner__content main-banner__content__desktop" style="background-image: url({{ section.settings.hero_image | img_url: 'master' }});">					   
+            </div>
+          </a>
 
 				</div>
 			</div>
